<resources>
    <string name="app_name">Github Users</string>
    <string name="hint_search_query">Search</string>
    <string name="text_loading">Loading...</string>
    <string name="text_no_user_found">No users found</string>
</resources>